--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,1 +1,16 @@
  
+::-webkit-scrollbar {
+    width: 5px;  
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #d4d4d4;  
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #c7c7c7;  
+}
