--- a/myapp/src/pages/dashboard/admin/index.css
+++ b/myapp/src/pages/dashboard/admin/index.css
@@ -2,6 +2,12 @@
     width: calc(100% - 256px);
 }
 
+@media (max-width: 767px) {
+    .main-dashboard {
+       width:  100%;
+    }
+  }
+
 .space-taker{
 width:256px;
 height: 100vh;
